added scm stanza

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.vanderbilt.mis.test</groupId>
    <artifactId>HelloGitFlow</artifactId>
@@ -25,4 +26,8 @@
          </plugin>
       </plugins>
    </build>
+   <scm>
+      <connection>scm:git:https://github.com/nadirsaghar/HelloGitFlow.git</connection>
+      <developerConnection>scm:git:https://github.com/nadirsaghar/HelloGitFlow.git</developerConnection>
+   </scm>
 </project>
