--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>1.0-m4.3</version>
             <classifier>sources</classifier>
       </dependency>
+      <dependency>
+         <groupId>external.atlassian.jgitflow</groupId>
+            <artifactId>jgitflow-maven-plugin</artifactId>
+            <version>1.0-m4.3</version>
+      </dependency>
    </dependencies>
    <scm>
       <connection>scm:git:https://github.com/nadirsaghar/HelloGitFlow.git</connection>
