--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
             <groupId>external.atlassian.jgitflow</groupId>
             <artifactId>jgitflow-maven-plugin</artifactId>
             <version>1.0-m4.3</version>
+            <executions>
+               <execution>
+                  <id>jgitflow-release</id>
+               </execution>
+            </executions>
             <configuration>
                <flowInitContext>
                   <masterBranchName>master</masterBranchName>
