--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.vanderbilt.mis.test</groupId>
    <artifactId>HelloGitFlow</artifactId>
@@ -17,8 +18,8 @@
                   <releaseBranchPrefix>release-</releaseBranchPrefix>
                   <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
                   <versionTagPrefix>HelloGitFlow-</versionTagPrefix>
-                  <mavenExecutorId>forked-path</mavenExecutorId>
                </flowInitContext>
+               <mavenExecutorId>forked-path</mavenExecutorId>
                <enableFeatureVersions>true</enableFeatureVersions>
                <pushFeatures>true</pushFeatures>
                <scmCommentPrefix>JGitFlow Release Plugin: </scmCommentPrefix>
@@ -29,14 +30,14 @@
    <dependencies>
       <dependency>
          <groupId>external.atlassian.jgitflow</groupId>
-            <artifactId>jgitflow-maven-plugin</artifactId>
-            <version>1.0-m4.3</version>
-            <classifier>sources</classifier>
+         <artifactId>jgitflow-maven-plugin</artifactId>
+         <version>1.0-m4.3</version>
+         <classifier>sources</classifier>
       </dependency>
       <dependency>
          <groupId>external.atlassian.jgitflow</groupId>
-            <artifactId>jgitflow-maven-plugin</artifactId>
-            <version>1.0-m4.3</version>
+         <artifactId>jgitflow-maven-plugin</artifactId>
+         <version>1.0-m4.3</version>
       </dependency>
    </dependencies>
    <scm>
