--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
                <pushFeatures>true</pushFeatures>
                <scmCommentPrefix>JGitFlow Release Plugin: </scmCommentPrefix>
             </configuration>
-         </plugin> <!-- Adding a comment -->
+         </plugin> <!- Changing Comment -->
       </plugins>
    </build>
    <dependencies>
